@@ -1,3 +1,7 @@
+<b>2012-03-21</b>
+
+* TripIt: Improve messaging for logging in with a partner account.
+
 <b>2012-03-18</b>
 
 * Bugfix: TripIt: Do not attempt to resolve IATA airport and airline codes if not passed in
